<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shipping_request_sect"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_store_48"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:text="Sushi Alex 6 de Diciembre"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="5dp"
            android:text="6 de Diciembre y avenida Shyris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Ship_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="5dp"
            android:text="Nayon calle quito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:backgroundTint="@color/tongueGrey"
            android:textColor="@color/black"
            android:text="@string/Reject"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

        <Button
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/Accept"
            android:textSize="12sp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>