<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/obara"
    tools:context=".fragments.LoginFragment"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="#00FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_marginTop="120dp"
            android:text="@string/TongueDrivers"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="26sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:layout_centerInParent="true"
            android:layout_width="270dp"

            app:cardBackgroundColor="#D8FFFFFF"
            app:cardCornerRadius="16dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:backgroundTint="@color/transparent"
                android:layout_width="270dp"
                android:background="@color/transparent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <TextView
                    android:background="@color/transparent"
                    android:text="Ingrese a su cuenta"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Space
                    android:background="@color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/frag_login_google_button"
                    android:layout_width="match_parent"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_googlelogo32"
                    android:backgroundTint="@color/tongueLightGrey"
                    android:text="@string/SignInWithGoogle"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/frag_login_facebook_button"
                    android:layout_width="match_parent"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_facebooklogo32"
                    android:backgroundTint="@color/tongueLightGrey"
                    android:text="@string/SignInWithFacebook"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/frag_login_create_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/black"
                    android:text="@string/CreateAccount"
                    android:layout_height="wrap_content"/>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</RelativeLayout>